syntax = "proto3";

import "google/protobuf/empty.proto";  

option csharp_namespace = "Protobufs.Seats";

message Seat {
  string id = 1;
  int32 row = 2;
  int32 column = 3;
}

message CreateSeatsRequest {
  string sessionId = 1;
  repeated Seat seats = 2;
}

service SeatsService {
  rpc CreateSeats (CreateSeatsRequest) returns (google.protobuf.Empty);
}